--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/preact": "^3.5.3",
+    "@astrojs/vercel": "^7.8.1",
     "@fontsource-variable/onest": "^5.1.0",
     "@justinribeiro/lite-youtube": "^1.5.0",
     "astro": "^4.15.8",
